fix overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,16 +26,9 @@
 
     body {
         text-rendering: optimizeSpeed;
-        position: relative;
 
-        @apply relative grid min-h-screen w-screen max-w-[100vw] grid-cols-[1fr] grid-rows-[1fr_auto] overflow-x-clip break-words !bg-surface-50 font-orbitron text-lg font-normal text-surface-900 transition-colors duration-500 dark:!bg-surface-900 dark:text-surface-50;
+        @apply relative grid min-h-screen w-screen max-w-[100vw] grid-cols-[1fr] grid-rows-[1fr_auto] overflow-y-auto overflow-x-clip break-words !bg-surface-50 font-orbitron text-lg font-normal text-surface-900 transition-colors duration-500 dark:!bg-surface-900 dark:text-surface-50;
     }
-    /* body::after {
-        @apply fixed inset-0 -z-[10] bg-gradient-to-b from-primary-50 to-secondary-50 bg-cover bg-fixed bg-no-repeat opacity-100 transition-opacity duration-500 content-[""] dark:opacity-0;
-    }
-    body::before {
-        @apply fixed inset-0 -z-[10] bg-gradient-to-b from-primary-900 to-secondary-900 bg-cover bg-fixed bg-no-repeat opacity-0 transition-opacity duration-500 content-[""] dark:opacity-100;
-    } */
 
     svg {
         display: block;
@@ -81,9 +74,9 @@
 
     /* custom scrollbar */
 
-    /* body {
+    body {
         scrollbar-gutter: stable both-edges;
-    } */
+    }
 
     ::-webkit-scrollbar {
         width: min(0.5rem, 0.5vw);
